--- a/index.html
+++ b/index.html
@@ -7,6 +7,29 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello World</p>
+   <header>
+        <h1>
+            TimesTable Tutoring
+        </h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#">Sign Up</a>
+                </li>
+                <li>
+                    <a href="#">Contact Us</a>
+                </li>
+                <li>
+                    <a href="#">How it works</a>
+                </li>
+                <li>
+                    <a href="#">Why Us?</a>
+                </li>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+            </ul>
+        </nav>
+   </header>
 </body>
 </html>
