--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <a href="#">Contact Us</a>
                 </li>
                 <li>
-                    <a href="#">How it works</a>
+                    <a href="#">How It Works</a>
                 </li>
                 <li>
                     <a href="#">Why Us?</a>
