--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="A Maths tutoring service for students in Bath, England">
+    <meta name="keywords" content="TimesTable Tutoring, tutoring, maths, Bath, England">
+    
+    <link rel="stylesheet" href="assets/css/style.css">
+
+    <title>TimesTable Tutoring</title>
 </head>
 <body>
    <header>
@@ -31,5 +36,17 @@
             </ul>
         </nav>
    </header>
+   <section>
+        Image
+   </section>
+   <section>
+        Why Us?
+   </section>
+   <section>
+        How It Works
+   </section>
+   <footer>
+        Contact Us
+   </footer>
 </body>
 </html>
