--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1 id="logo">
             TimesTable Tutoring
         </h1>
-        <nav>
+        <nav id="menu">
             <ul>
                 <li>
                     <a href="#">Sign Up</a>
