add more styling to nav, particularly signup-nav

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav id="menu">
             <ul>
                 <li>
-                    <a href="#">Sign Up</a>
+                    <a href="#" id="signup-nav">SIGN UP</a>
                 </li>
                 <li>
                     <a href="#">Contact Us</a>
