--- a/index.html
+++ b/index.html
@@ -36,8 +36,11 @@
             </ul>
         </nav>
    </header>
-   <section>
-        Image
+   <section id="hero-container">
+        <div id="hero-image"></div>
+        <div>
+
+        </div>
    </section>
    <section>
         Why Us?
