--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
    </header>
    <section id="hero-container">
         <div id="hero-image"></div>
-        <div>
+        <div id="cover-text">
 
         </div>
    </section>
