add more styling for cover text

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
    <section id="hero-container">
         <div id="hero-image"></div>
         <div id="cover-text">
-
+            <h2>TimesTable Tutoring</h2>
+            <h3>High quality maths tuition for all willing students up to a GCSE standard</h3>
         </div>
    </section>
    <section>
