fixed html format issue with why us section

--- a/index.html
+++ b/index.html
@@ -45,20 +45,28 @@
    </section>
    <section id="why-us">
         <h2 id="us-heading">Why Choose Us?</h2>
-        <div class="left-why">
-            <h3 class="left-why-heading">Tutor Qualifications <i class="fa-solid fa-person-chalkboard"></i></h3>
-            <p>All tutors we employ are already qualified school teachers. This ensures that they have experience teaching and working with children as well as being up to date with current school curriculums. As a result they can make sure that they are covering all the relevant modules in order to achieve the desried outcome. </p>
+        <div id="left-why">
+            <div>
+                <h3 class="left-why-heading">Tutor Qualifications <i class="fa-solid fa-person-chalkboard"></i></h3>
+                <p>All tutors we employ are already qualified school teachers. This ensures that they have experience teaching and working with children as well as being up to date with current school curriculums. As a result they can make sure that they are covering all the relevant modules in order to achieve the desried outcome. </p>
+            </div>
+            <div>
+                <h3 class="left-why-heading">Flexible Teaching Methods <i class="fa-solid fa-computer"></i></h3>
+                <p>TimesTable Tutoring offers felxible teaching methods with an option of online learning as well as tradional face to face tutoring. Both methods have their positives but a high quality service will be provided either way.</p>
+            </div>
+        </div>  
+        <div id="right-why">
+            <div>
+                <h3 class="right-why-heading">Student Satisfaction <i class="fa-solid fa-face-smile-beam"></i></h3>
+                <p>TimesTable Tutoring boasts a successful record, with 97% of students we take on achieving their desired learning outcomes such as a particular grade in an exam.</p>
+            </div>
+            <div>
+                <h3 class="right-why-heading">Competitive Pricing <i class="fa-solid fa-sack-dollar"></i></h3>
+                <p>Our tutoring sessions are currently priced at £25 per hour, a very competitive price in the south-west. We strive to deliver tutoring to warrant this price and offer a money back guarantee to customers who are not happy with our tutoring package after the first session. To utilise this service please contact us with the information displayed at the bottom of the page. </p>
+            </div>
         </div>
-        <div class="left-why">
-            <h3 class="left-why-heading">Flexible Teaching Methods <i class="fa-solid fa-computer"></i></h3>
-            <p>TimesTable Tutoring offers felxible teaching methods with an option of online learning as well as tradional face to face tutoring. Both methods have their positives but a high quality service will be provided either way.</p>
-        </div>
-        <div class="right-why">
-            <h3 class="right-why-heading">Student Satisfaction <i class="fa-solid fa-face-smile-beam"></i></h3>
-            <p>TimesTable Tutoring boasts a successful record, with 97% of students we take on achieving their desired learning outcomes such as a particular grade in an exam.</p>
-        <div class="right-why">
-            <h3 class="right-why-heading">Competitive Pricing <i class="fa-solid fa-sack-dollar"></i></h3>
-            <p>Our tutoring sessions are currently priced at £25 per hour, a very competitive price in the south-west. We strive to deliver tutoring to warrant this price and offer a money back guarantee to customers who are not happy with our tutoring package after the first session. To utilise this service please contact us with the information displayed at the bottom of the page. </p>
+        <div id="center-why-img">
+
         </div>
    </section>
    <section>
