add html for center-why image

--- a/index.html
+++ b/index.html
@@ -73,8 +73,10 @@
                 <p>Our tutoring sessions are currently priced at £25 per hour, a very competitive price in the south-west. We strive to deliver tutoring to warrant this price and offer a money back guarantee to customers who are not happy with our tutoring package after the first session. To utilise this service please contact us with the information displayed at the bottom of the page. </p>
             </div>
         </div>
-        <div id="center-why-img">
-
+        <div id="center-why">
+            <div id="why-img-container">
+                <div id="why-img"></div>
+            </div>
         </div>
    </section>
    <section>
