pushed right-why and left-why down with a margin

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a href="#">Contact Us</a>
                 </li>
                 <li>
-                    <a href="#">How It Works</a>
+                    <a href="#how-it-works">How It Works</a>
                 </li>
                 <li>
                     <a href="#why-us">Why Us?</a>
@@ -79,8 +79,10 @@
             </div>
         </div>
    </section>
-   <section>
-        How It Works
+   <section id="#how-it-works">
+        <div>
+
+        </div>
    </section>
    <footer>
         Contact Us
