add basic html for how-it-works section

--- a/index.html
+++ b/index.html
@@ -79,8 +79,25 @@
             </div>
         </div>
    </section>
-   <section id="#how-it-works">
+   <section id="how-it-works">
         <div>
+            <h2>Sign Up!</h2>
+            <p></p>
+
+        </div>
+        <div>
+            <h2>Await Tutor Contact</h2>
+            <p></p>
+
+        </div>
+        <div>
+            <h2>Start Studying</h2>
+            <p></p>
+
+        </div>
+        <div>
+            <h2>See Results</h2>
+            <p></p>
 
         </div>
    </section>
