add heading and div styling

--- a/index.html
+++ b/index.html
@@ -80,26 +80,31 @@
         </div>
    </section>
    <section id="how-it-works">
-        <div>
-            <h2>Sign Up!</h2>
-            <p></p>
+        <h2>
+            How It Works
+        </h2>
+        <div id="how-it-works-background">
+            <div>
+                <h2>Sign Up!</h2>
+                <p></p>
 
-        </div>
-        <div>
-            <h2>Await Tutor Contact</h2>
-            <p></p>
+             </div>
+            <div>
+                <h2>Await Tutor Contact</h2>
+                <p></p>
 
-        </div>
-        <div>
-            <h2>Start Studying</h2>
-            <p></p>
+            </div>
+            <div>
+                <h2>Start Studying</h2>
+                <p></p>
 
-        </div>
-        <div>
-            <h2>See Results</h2>
-            <p></p>
+            </div>
+            <div>
+                <h2>See Results</h2>
+                <p></p>
 
-        </div>
+            </div>
+        </div>    
    </section>
    <footer>
         Contact Us
