add how-it-works-heading styling

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
    </section>
    <section id="how-it-works">
-        <h2>
+        <h2 id="how-it-works-heading">
             How It Works
         </h2>
         <div id="how-it-works-background">
