html added for first two how-it-works divs

--- a/index.html
+++ b/index.html
@@ -85,22 +85,27 @@
         </h2>
         <div id="how-it-works-background">
             <div>
-                <h2>Sign Up!</h2>
-                <p></p>
-
+                <h2>Sign Up! <i class="fa-solid fa-user-plus"></i></h2>
+                <br>
+                <br>
+                <p>Fill in the form on our Sign Up page to give us more information about you and your required needs.</p>
+                <br>
+                <br>
+                <a href="#" id="signup-how-it-works">SIGN UP</a>
              </div>
             <div>
-                <h2>Await Tutor Contact</h2>
+                <h2>Await Tutor Contact <i class="fa-solid fa-phone-volume"></i></h2>
+                <br>
+                <br>
+                <p>We provide a tutor who best fits the needs you have requested. This tutor will then be in touch with you via email or phone call to arrange your first session!</p>
+            </div>
+            <div>
+                <h2>Start Studying <i class="fa-solid fa-pen-to-square"></i></h2>
                 <p></p>
 
             </div>
             <div>
-                <h2>Start Studying</h2>
-                <p></p>
-
-            </div>
-            <div>
-                <h2>See Results</h2>
+                <h2>See Results <i class="fa-solid fa-user-graduate"></i></h2>
                 <p></p>
 
             </div>
