finish how-it-works section

--- a/index.html
+++ b/index.html
@@ -101,13 +101,15 @@
             </div>
             <div>
                 <h2>Start Studying <i class="fa-solid fa-pen-to-square"></i></h2>
-                <p></p>
-
+                <br>
+                <br>
+                <p>Once tutoring sessions have begun, be sure to engage as much as possible. The more you put in, the more you will get out!</p>
             </div>
             <div>
                 <h2>See Results <i class="fa-solid fa-user-graduate"></i></h2>
-                <p></p>
-
+                <br>
+                <br>
+                <p>Students will show an increased confidence, understanding and self-belief when solving maths problems and be able to target grades that before looked out of reach.</p>
             </div>
         </div>    
    </section>
