contact background image and content

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <a href="#" id="signup-nav">SIGN UP</a>
                 </li>
                 <li>
-                    <a href="#">Contact Us</a>
+                    <a href="#contact">Contact Us</a>
                 </li>
                 <li>
                     <a href="#how-it-works">How It Works</a>
@@ -113,8 +113,17 @@
             </div>
         </div>    
    </section>
-   <footer>
-        Contact Us
+   <br>
+   <footer id="contact">
+        <div id="contact-info">
+            <h2>Contact Us</h2>
+            <p>100 Division Drive, Bath, England, BA2 1AB</p>
+            <p>01234 567890</p>
+            <p>timestabletutor@maths.com</p>
+            <div id="socials">
+
+            </div>
+        </div>
    </footer>
 
    <script src="https://kit.fontawesome.com/c07b54a021.js" crossorigin="anonymous"></script>
