change contact image and add styling

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <h2>Sign Up! <i class="fa-solid fa-user-plus"></i></h2>
                 <br>
                 <br>
-                <p>Fill in the form on our Sign Up page to give us more information about you and your required needs.</p>
+                <p>Fill in our Sign Up form to give us more information about you and your required needs.</p>
                 <br>
                 <br>
                 <a href="#" id="signup-how-it-works">SIGN UP</a>
