add links for socials

--- a/index.html
+++ b/index.html
@@ -118,11 +118,21 @@
         <div id="contact-info">
             <h2>Contact Us</h2>
             <p>100 Division Drive, Bath, England, BA2 1AB</p>
+            <br>
             <p>01234 567890</p>
+            <br>
             <p>timestabletutor@maths.com</p>
-            <div id="socials">
-
-            </div>
+            <ul id="socials">
+                <li>
+                    <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"></a>
+                </li>
+                <li>
+                    <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"></a>
+                </li>
+                <li>
+                    <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"></a>
+                </li>
+            </ul>
         </div>
    </footer>
 
