--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav id="menu">
             <ul>
                 <li>
-                    <a href="#" id="signup-nav">SIGN UP</a>
+                    <a href="#signup" id="signup-nav">SIGN UP</a>
                 </li>
                 <li>
                     <a href="#contact">Contact Us</a>
@@ -91,7 +91,7 @@
                 <p>Fill in our Sign Up form to give us more information about you and your required needs.</p>
                 <br>
                 <br>
-                <a href="#" id="signup-how-it-works">SIGN UP</a>
+                <a href="#signup" id="signup-how-it-works">SIGN UP</a>
              </div>
             <div>
                 <h2>Await Tutor Contact <i class="fa-solid fa-phone-volume"></i></h2>
@@ -112,6 +112,21 @@
                 <p>Students will show an increased confidence, understanding and self-belief when solving maths problems and be able to target grades that before looked out of reach.</p>
             </div>
         </div>    
+   </section>
+   <section id="signup">
+        <form action="https://formdump.codeinstitute.net/" method="post" class="signup-form">
+            <h2>Sign Up - Apply For Tutoring</h2>
+            <br>
+            <label for="fname">First Name</label>
+            <input type="text" id="fname" name="first_name" required>
+            <label for="lname">Last Name</label>
+            <input type="text" id="lname" name="last_name" required>
+            <label for="cname">Child Name</label>
+            <input type="text" id="cname" name="childs_name" required>
+        </form>
+
+
+        </div>
    </section>
    <br>
    <footer id="contact">
