add more input elemnts for the form

--- a/index.html
+++ b/index.html
@@ -119,10 +119,28 @@
             <br>
             <label for="fname">First Name</label>
             <input type="text" id="fname" name="first_name" required>
+
             <label for="lname">Last Name</label>
             <input type="text" id="lname" name="last_name" required>
+
             <label for="cname">Child Name</label>
             <input type="text" id="cname" name="childs_name" required>
+
+            <label for="cage">Child Age</label>
+            <select id="cage" name="child_age" required>
+                <option value="8 or Under">8 or Under</option>
+                <option value="9-10">9-10</option>
+                <option value="11-12">11-12</option>
+                <option value="13-14">13-14</option>
+                <option value="15-16">15-16</option>
+                <option value="17+">17+</option>
+            </select>    
+
+            <label for="email">Email Address</label>
+            <input type="email" id="email" name="email_address" required>
+
+            <label for="phone">Phone Number</label>
+            <input type="text" id="phone" name="phone_number" required>
         </form>
 
 
