add last selct on frequency

--- a/index.html
+++ b/index.html
@@ -141,6 +141,14 @@
 
             <label for="phone">Phone Number</label>
             <input type="text" id="phone" name="phone_number" required>
+
+            <label for="frequency">How Frequently Would You Like Lessons</label>
+            <select id="frequency" name="lesson_frequency" required>
+                <option value="weekly">Weekly</option>
+                <option value="fortnightly">Fortnightly</option>
+                <option value="monthly">Monthly</option>
+            </select>
+            
         </form>
 
 
