add two more selct inputs for form

--- a/index.html
+++ b/index.html
@@ -148,7 +148,17 @@
                 <option value="fortnightly">Fortnightly</option>
                 <option value="monthly">Monthly</option>
             </select>
-            
+
+            <label for="hours">How Many Hours Worth Of Lessons</label>
+            <select id="hours" name="hours_wanted" required>
+                <option value="1-5">1-5</option>
+                <option value="6-10">6-10</option>
+                <option value="11-15">11-15</option>
+                <option value="16-20">16-20</option>
+                <option value="20+">20+</option>
+                <option value="unsure">Unsure</option>
+            </select>
+
         </form>
 
 
