--- a/index.html
+++ b/index.html
@@ -114,62 +114,63 @@
         </div>    
    </section>
    <section id="signup">
-    <div id="form-img">
-        <form action="https://formdump.codeinstitute.net/" method="post" class="signup-form">
-            <h2>Sign Up - Apply For Tutoring</h2>
-            <br>
-            <label for="fname">First Name</label>
-            <input type="text" id="fname" name="first_name" required>
-            <br>
-            <label for="lname">Last Name</label>
-            <input type="text" id="lname" name="last_name" required>
-            <br>
-            <label for="cname">Child Name</label>
-            <input type="text" id="cname" name="childs_name" required>
-            <br>
-            <label for="cage">Child Age</label>
-            <select id="cage" name="child_age" required>
-                <option value="8 or Under">8 or Under</option>
-                <option value="9-10">9-10</option>
-                <option value="11-12">11-12</option>
-                <option value="13-14">13-14</option>
-                <option value="15-16">15-16</option>
-                <option value="17+">17+</option>
-            </select>    
-            <br>
-            <label for="email">Email Address</label>
-            <input type="email" id="email" name="email_address" required>
-            <br>
-            <label for="phone">Phone Number</label>
-            <input type="text" id="phone" name="phone_number" required>
-            <br>
-            <label for="preference">Face to Face Lessons</label>
-            <input type="radio" id="preference" name="teaching_preference">
-            <label for="preference">Online Lessons</label>
-            <input type="radio" id="preference" name="teaching_preference">
-            <br>
-            <label for="frequency">How Frequently Would You Like Lessons</label>
-            <select id="frequency" name="lesson_frequency" required>
-                <option value="weekly">Weekly</option>
-                <option value="fortnightly">Fortnightly</option>
-                <option value="monthly">Monthly</option>
-            </select>
-            <br>
-            <label for="hours">How Many Hours Worth Of Lessons</label>
-            <select id="hours" name="hours_wanted" required>
-                <option value="1-5">1-5</option>
-                <option value="6-10">6-10</option>
-                <option value="11-15">11-15</option>
-                <option value="16-20">16-20</option>
-                <option value="20+">20+</option>
-                <option value="unsure">Unsure</option>
-            </select>
-        </form>
-    </div>
+        <div id="form-img">
+            <form action="https://formdump.codeinstitute.net/" method="post" class="signup-form">
+                <h2>Sign Up - Apply For Tutoring</h2>
+                <br>
+                <label for="fname">First Name</label>
+                <input type="text" id="fname" name="first_name" required>
+                <br>
+                <label for="lname">Last Name</label>
+                <input type="text" id="lname" name="last_name" required>
+                <br>
+                <label for="cname">Child Name</label>
+                <input type="text" id="cname" name="childs_name" required>
+                <br>
+                <label for="cage">Child Age</label>
+                <select id="cage" name="child_age" required>
+                    <option value="8 or Under">8 or Under</option>
+                    <option value="9-10">9-10</option>
+                    <option value="11-12">11-12</option>
+                    <option value="13-14">13-14</option>
+                    <option value="15-16">15-16</option>
+                    <option value="17+">17+</option>
+                </select>    
+                <br>
+                <label for="email">Email Address</label>
+                <input type="email" id="email" name="email_address" required>
+                <br>
+                <label for="phone">Phone Number</label>
+                <input type="text" id="phone" name="phone_number" required>
+                <br>
+                <label for="preference">Face to Face Lessons</label>
+                <input type="radio" id="preference" name="teaching_preference" value="face-to-face" required>
+                <label for="preference">Online Lessons</label>
+                <input type="radio" id="preference" name="teaching_preference" value="online" required>
+                <label for="preference">Either Method</label>
+                <input type="radio" id="preference" name="teaching_preference" value="either" required>
+                <br>
+                <label for="frequency">How Frequently Would You Like Lessons</label>
+                <select id="frequency" name="lesson_frequency" required>
+                    <option value="weekly">Weekly</option>
+                    <option value="fortnightly">Fortnightly</option>
+                    <option value="monthly">Monthly</option>
+                </select>
+                <br>
+                <label for="hours">How Many Hours Worth Of Lessons</label>
+                <select id="hours" name="hours_wanted" required>
+                    <option value="1-5">1-5</option>
+                    <option value="6-10">6-10</option>
+                    <option value="11-15">11-15</option>
+                    <option value="16-20">16-20</option>
+                    <option value="20+">20+</option>
+                    <option value="unsure">Unsure</option>
+                </select>
 
+
+            </form>
         </div>
    </section>
-   <br>
    <footer id="contact">
         <div id="contact-info">
             <h2>Contact Us</h2>
