add html for submit button

--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
                     <option value="20+">20+</option>
                     <option value="unsure">Unsure</option>
                 </select>
-
-
+                <br>
+                <input type="submit" value="Send Enquiry" id="submit-button">
             </form>
         </div>
    </section>
