add media queries so website is responsive to 525px wide

--- a/index.html
+++ b/index.html
@@ -88,7 +88,6 @@
             <div>
                 <h2>Sign Up! <i class="fa-solid fa-user-plus"></i></h2>
                 <br>
-                <br>
                 <p>Fill in our Sign Up form to give us more information about you and your required needs.</p>
                 <br>
                 <br>
@@ -97,20 +96,17 @@
             <div>
                 <h2>Await Tutor Contact <i class="fa-solid fa-phone-volume"></i></h2>
                 <br>
-                <br>
                 <p>We provide a tutor who best fits the needs you have requested. This tutor will then be in touch with you via email or phone call to arrange your first session!</p>
             </div>
             <div>
                 <h2>Start Studying <i class="fa-solid fa-pen-to-square"></i></h2>
-                <br>
                 <br>
                 <p>Once tutoring sessions have begun, be sure to engage as much as possible. The more you put in, the more you will get out!</p>
             </div>
             <div>
                 <h2>See Results <i class="fa-solid fa-user-graduate"></i></h2>
                 <br>
-                <br>
-                <p>Students will show an increased confidence, understanding and self-belief when solving maths problems and be able to target grades that before looked out of reach.</p>
+                <p>We promise an increased confidence, understanding and self-belief when solving maths problems and be able to target grades that before looked out of reach.</p>
             </div>
         </div>    
    </section>
