edit radio labels for increased accessibility, added to testing readme

--- a/index.html
+++ b/index.html
@@ -140,12 +140,12 @@
                 <label for="phone">Phone Number</label>
                 <input type="text" id="phone" name="phone_number" required>
                 <br>
-                <label for="preference">Face to Face Lessons</label>
-                <input type="radio" id="preference" name="teaching_preference" value="face-to-face" required>
-                <label for="preference">Online Lessons</label>
-                <input type="radio" id="preference" name="teaching_preference" value="online" required>
-                <label for="preference">Either Method</label>
-                <input type="radio" id="preference" name="teaching_preference" value="either" required>
+                <label for="face-to-face">Face to Face Lessons</label>
+                <input type="radio" id="face-to-face" name="teaching_preference" value="face-to-face" required>
+                <label for="online">Online Lessons</label>
+                <input type="radio" id="online" name="teaching_preference" value="online" required>
+                <label for="either-teaching">Either Method</label>
+                <input type="radio" id="either-teaching" name="teaching_preference" value="either" required>
                 <br>
                 <label for="frequency">How Frequently Would You Like Lessons</label>
                 <select id="frequency" name="lesson_frequency" required>
