add size to select elements in form

--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
                 <input type="text" id="cname" name="childs_name" required>
                 <br>
                 <label for="cage">Child Age</label>
-                <select id="cage" name="child_age" required>
-                    <option value="8 or Under">8 or Under</option>
+                <select id="cage" name="child_age" size="6" required>
+                    <option value="8-or-Under">8 or Under</option>
                     <option value="9-10">9-10</option>
                     <option value="11-12">11-12</option>
                     <option value="13-14">13-14</option>
@@ -148,14 +148,14 @@
                 <input type="radio" id="either-teaching" name="teaching_preference" value="either" required>
                 <br>
                 <label for="frequency">How Frequently Would You Like Lessons</label>
-                <select id="frequency" name="lesson_frequency" required>
+                <select id="frequency" name="lesson_frequency" size="3" required>
                     <option value="weekly">Weekly</option>
                     <option value="fortnightly">Fortnightly</option>
                     <option value="monthly">Monthly</option>
                 </select>
                 <br>
                 <label for="hours">How Many Hours Worth Of Lessons</label>
-                <select id="hours" name="hours_wanted" required>
+                <select id="hours" name="hours_wanted" size="6" required>
                     <option value="1-5">1-5</option>
                     <option value="6-10">6-10</option>
                     <option value="11-15">11-15</option>
